# xsia_leptos_ui_csr_v1_public

./: Cargo.toml  Trunk.toml  index.html  package-lock.json  rust-analyzer.toml  tailwind.config.js
src/: app.rs  main.rs
style/: app.css
